feat: Database connection and it's setup

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
+    "mongoose": "^9.1.5",
     "zod": "^4.3.5"
   },
   "devDependencies": {
