feat: users pagination

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "seed": "ts-node scripts/seed.ts"
   },
   "keywords": [],
   "author": "",
