fix: build error fixes

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,8 +12,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*",
-    "scripts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
